todo - add more items

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO:
+* bluez4: remove as it's obsolete
 * scriptlets: stdin/out module that provides gui services to some
   back-end script or process where e just talks via stdin/out.
   things to provide:
