--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 TODO:
-
-* scriptlets: stdin/out module that provides gui services to some
+ scriptlets: stdin/out module that provides gui services to some
   back-end script or process where e just talks via stdin/out.
   things to provide:
   * only run scriptlet every N seconds to poll then send back data
